// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellDate should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;

exports[`ModelCellDate should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  baz
</DocumentFragment>
`;

exports[`ModelCellDate should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
